--- a/paper/main.tex
+++ b/paper/main.tex
@@ -44,6 +44,9 @@
 \newunicodechar{π}{\ensuremath\pi}
 \newunicodechar{⊒}{\ensuremath\pcong}
 \newunicodechar{⊎}{\ensuremath\uplus}
+\newunicodechar{⟦}{\ensuremath\llbracket}
+\newunicodechar{⟧}{\ensuremath\rrbracket}
+\newunicodechar{𝒞}{\ensuremath\ReductionContext}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
