--- a/paper/Process.tex
+++ b/paper/Process.tex
@@ -517,6 +517,9 @@ distributes the free channels among the two parallel processes.
 
 \end{AgdaAlign}
 
+Permutations preserve process typeability. In a sense we can read this property
+as the fact that we can rename channels at will.
+
 \begin{code}%
 \>[0]\AgdaFunction{\#process}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
