--- a/paper/main.bib
+++ b/paper/main.bib
@@ -7,6 +7,31 @@
 % 3. REMOVE THE url, timestamp, biburl and bibsource ITEMS FROM THE ENTRY
 % 4. REMOVE THE \ IN FRONT OF _ THIS ESCAPE SEQUENCE IS NOT NECESSARY ANY MORE
 
+@article{KobayashiPierceTurner99,
+  author    = {Naoki Kobayashi and
+               Benjamin C. Pierce and
+               David N. Turner},
+  title     = {Linearity and the pi-calculus},
+  journal   = {{ACM Transactions on Programming Languages and Systems}},
+  volume    = {21},
+  number    = {5},
+  year      = {1999},
+  pages     = {914-947},
+  mydoi       = {http://doi.acm.org/10.1145/330249.330251},
+}
+
+@inproceedings{Kobayashi02b,
+  author    = {Naoki Kobayashi},
+  title     = {Type Systems for Concurrent Programs},
+  booktitle = {10th Anniversary Colloquium of UNU/IIST},
+  year      = {2002},
+  pages     = {439-453},
+  nodoi       = {http://dx.doi.org/10.1007/978-3-540-40007-3_26},
+  publisher = {Springer},
+  series    = {LNCS 2757},
+  note      = {Extended version available at \url{http://www.kb.ecei.tohoku.ac.jp/~koba/papers/tutorial-type-extended.pdf}},
+}
+
 @inproceedings{CarboneEtAl24,
   author       = {Marco Carbone and
                   David Castro{-}Perez and
