--- a/paper/main.bib
+++ b/paper/main.bib
@@ -7,6 +7,32 @@
 % 3. REMOVE THE url, timestamp, biburl and bibsource ITEMS FROM THE ENTRY
 % 4. REMOVE THE \ IN FRONT OF _ THIS ESCAPE SEQUENCE IS NOT NECESSARY ANY MORE
 
+@inproceedings{CairesPfenning10,
+  author       = {Lu{\'{\i}}s Caires and
+                  Frank Pfenning},
+  editor       = {Paul Gastin and
+                  Fran{\c{c}}ois Laroussinie},
+  title        = {Session Types as Intuitionistic Linear Propositions},
+  booktitle    = {{CONCUR} 2010 - Concurrency Theory, 21th International Conference,
+                  {CONCUR} 2010, Paris, France, August 31-September 3, 2010. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {6269},
+  pages        = {222--236},
+  publisher    = {Springer},
+  year         = {2010},
+  doi          = {10.1007/978-3-642-15375-4\_16},
+}
+
+@article{Vasconcelos12,
+  author       = {Vasco T. Vasconcelos},
+  title        = {Fundamentals of session types},
+  journal      = {Inf. Comput.},
+  volume       = {217},
+  pages        = {52--70},
+  year         = {2012},
+  doi          = {10.1016/J.IC.2012.05.002},
+}
+
 @article{KobayashiPierceTurner99,
   author    = {Naoki Kobayashi and
                Benjamin C. Pierce and
