--- a/paper/main.tex
+++ b/paper/main.tex
@@ -112,12 +112,10 @@
 
 \maketitle
 
-\section{Introduction}
-\label{sec:introduction}
-
+\input{introduction}
 \input{calculus}
 \input{agda}
-% \input{formalization}
+\input{conclusion}
 
 \bibliography{main}
 
