--- a/paper/main.bib
+++ b/paper/main.bib
@@ -7,6 +7,68 @@
 % 3. REMOVE THE url, timestamp, biburl and bibsource ITEMS FROM THE ENTRY
 % 4. REMOVE THE \ IN FRONT OF _ THIS ESCAPE SEQUENCE IS NOT NECESSARY ANY MORE
 
+@article{GotoEtAl16,
+  author       = {Matthew A. Goto and
+                  Radha Jagadeesan and
+                  Alan Jeffrey and
+                  Corin Pitcher and
+                  James Riely},
+  title        = {An extensible approach to session polymorphism},
+  journal      = {Math. Struct. Comput. Sci.},
+  volume       = {26},
+  number       = {3},
+  pages        = {465--509},
+  year         = {2016},
+  doi          = {10.1017/S0960129514000231},
+}
+
+@inproceedings{CastroFerreiraYoshida20,
+  author       = {David Castro{-}Perez and
+                  Francisco Ferreira and
+                  Nobuko Yoshida},
+  editor       = {Armin Biere and
+                  David Parker},
+  title        = {{EMTST:} Engineering the Meta-theory of Session Types},
+  booktitle    = {Tools and Algorithms for the Construction and Analysis of Systems
+                  - 26th International Conference, {TACAS} 2020, Held as Part of the
+                  European Joint Conferences on Theory and Practice of Software, {ETAPS}
+                  2020, Dublin, Ireland, April 25-30, 2020, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12079},
+  pages        = {278--285},
+  publisher    = {Springer},
+  year         = {2020},
+  doi          = {10.1007/978-3-030-45237-7\_17},
+}
+
+@inproceedings{Thiemann19,
+  author       = {Peter Thiemann},
+  editor       = {Ekaterina Komendantskaya},
+  title        = {Intrinsically-Typed Mechanized Semantics for Session Types},
+  booktitle    = {Proceedings of the 21st International Symposium on Principles and
+                  Practice of Programming Languages, {PPDP} 2019, Porto, Portugal, October
+                  7-9, 2019},
+  pages        = {19:1--19:15},
+  publisher    = {{ACM}},
+  year         = {2019},
+  doi          = {10.1145/3354166.3354184},
+}
+
+@inproceedings{Gay01,
+  author       = {Simon J. Gay},
+  editor       = {Richard J. Boulton and
+                  Paul B. Jackson},
+  title        = {A Framework for the Formalisation of Pi Calculus Type Systems in Isabelle/HOL},
+  booktitle    = {Theorem Proving in Higher Order Logics, 14th International Conference,
+                  TPHOLs 2001, Edinburgh, Scotland, UK, September 3-6, 2001, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {2152},
+  pages        = {217--232},
+  publisher    = {Springer},
+  year         = {2001},
+  doi          = {10.1007/3-540-44755-5\_16},
+}
+
 @inproceedings{CairesPfenning10,
   author       = {Lu{\'{\i}}s Caires and
                   Frank Pfenning},
@@ -553,6 +615,36 @@
   pages     = {69:1--69:38},
   year      = {2019},
   doi       = {10.1145/3329125},
+}
+
+@inproceedings{RouvoetPoulsenKrebbersVisser20,
+  author       = {Arjen Rouvoet and
+                  Casper Bach Poulsen and
+                  Robbert Krebbers and
+                  Eelco Visser},
+  editor       = {Jasmin Blanchette and
+                  Catalin Hritcu},
+  title        = {Intrinsically-typed definitional interpreters for linear, session-typed
+                  languages},
+  booktitle    = {Proceedings of the 9th {ACM} {SIGPLAN} International Conference on
+                  Certified Programs and Proofs, {CPP} 2020, New Orleans, LA, USA, January
+                  20-21, 2020},
+  pages        = {284--298},
+  publisher    = {{ACM}},
+  year         = {2020},
+  doi          = {10.1145/3372885.3373818},
+}
+
+@inproceedings{CicconePadovani20,
+  author       = {Luca Ciccone and
+                  Luca Padovani},
+  title        = {A Dependently Typed Linear {\(\pi\)}-Calculus in Agda},
+  booktitle    = {{PPDP} '20: 22nd International Symposium on Principles and Practice
+                  of Declarative Programming, Bologna, Italy, 9-10 September, 2020},
+  pages        = {8:1--8:14},
+  publisher    = {{ACM}},
+  year         = {2020},
+  doi          = {10.1145/3414080.3414109},
 }
 
 @inproceedings{CicconePadovani22C,
