(re)started paper

--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -2,10 +2,10 @@
 \label{sec:agda}
 
 \input{Type}
-\input{Context}
-\input{Permutations}
-\input{Process}
-\input{Congruence}
-\input{Reduction}
-\input{DeadlockFreedom}
-\input{Safety}
+% \input{Context}
+% \input{Permutations}
+% \input{Process}
+% \input{Congruence}
+% \input{Reduction}
+% \input{DeadlockFreedom}
+% \input{Safety}
