--- a/paper/main.tex
+++ b/paper/main.tex
@@ -47,6 +47,7 @@
 \newunicodechar{⟦}{\ensuremath\llbracket}
 \newunicodechar{⟧}{\ensuremath\rrbracket}
 \newunicodechar{𝒞}{\ensuremath\ReductionContext}
+\newunicodechar{ℕ}{\ensuremath{\mathbb{N}}}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
