--- a/paper/Type.lagda.tex
+++ b/paper/Type.lagda.tex
@@ -1,74 +1,84 @@
 \begin{code}[hide]
+{-# OPTIONS --rewriting #-}
+open import Data.Nat
+open import Data.Fin
 open import Relation.Binary.PropositionalEquality using (_≡_; refl; cong; cong₂)
+open import Agda.Builtin.Equality.Rewrite
 \end{code}
 
 \subsection{Type Representation}
 \label{sec:type-agda}
 
-The representation of types is standard, with one constructor for each of the
-forms described in \Cref{sec:calculus}.
+The representation of types is fairly standard, with one constructor for each of
+the forms described in \Cref{sec:calculus}. We use de Bruijn indices for
+denoting type variables and we make sure that types are well-scoped by indexing
+them with the number of variables that must be bound.
 
 \begin{code}
-data Type : Set where
-  𝟘 𝟙 ⊥ ⊤          : Type
-  ¡ ¿              : Type → Type
-  _&_ _⊕_ _⊗_ _⅋_  : Type → Type → Type
+data PreType : ℕ → Set where
+  𝟘 𝟙 ⊥ ⊤          : ∀{n} → PreType n
+  var rav          : ∀{n} → Fin n → PreType n
+  ¡ ¿              : ∀{n} → PreType n → PreType n
+  _&_ _⊕_ _⊗_ _⅋_  : ∀{n} → PreType n → PreType n → PreType n
+  $∀ $∃            : ∀{n} → PreType (suc n) → PreType n
 \end{code}
 
-The notion of duality is formalized as a \emph{relation} \AgdaDatatype{Dual}
-such that $\AgdaDatatype{Dual}~A~B$ holds if and only if $A = \dual{B}$.
+Note the constructors \AgdaInductiveConstructor{var} and
+\AgdaInductiveConstructor{rav}, which respectively represent type variables and
+their dual, and the quantifiers \AgdaInductiveConstructor{\$∀} and
+\AgdaInductiveConstructor{\$∃} which increase the number of bound variables in
+the scoped (pre)type.
+
+The dual of a (pre)type is computed by the following \emph{function}
+\AgdaFunction{dual}.
 
 \begin{code}
-data Dual : Type → Type → Set where
-  d-𝟘-⊤  : Dual 𝟘 ⊤
-  d-⊤-𝟘  : Dual ⊤ 𝟘
-  d-𝟙-⊥  : Dual 𝟙 ⊥
-  d-⊥-𝟙  : Dual ⊥ 𝟙
-  d-!-?  : ∀{A B} → Dual A B → Dual (¡ A) (¿ B)
-  d-?-!  : ∀{A B} → Dual A B → Dual (¿ A) (¡ B)
-  d-&-⊕  : ∀{A B A′ B′} → Dual A A′ → Dual B B′ → Dual (A & B) (A′ ⊕ B′)
-  d-⊕-&  : ∀{A B A′ B′} → Dual A A′ → Dual B B′ → Dual (A ⊕ B) (A′ & B′)
-  d-⊗-⅋  : ∀{A B A′ B′} → Dual A A′ → Dual B B′ → Dual (A ⊗ B) (A′ ⅋ B′)
-  d-⅋-⊗  : ∀{A B A′ B′} → Dual A A′ → Dual B B′ → Dual (A ⅋ B) (A′ ⊗ B′)
+dual : ∀{n} → PreType n → PreType n
+dual 𝟘        = ⊤
+dual 𝟙        = ⊥
+dual ⊥        = 𝟙
+dual ⊤        = 𝟘
+dual (var x)  = rav x
+dual (rav x)  = var x
+dual (¡ A)    = ¿ (dual A)
+dual (¿ A)    = ¡ (dual A)
+dual (A & B)  = dual A ⊕ dual B
+dual (A ⊕ B)  = dual A & dual B
+dual (A ⊗ B)  = dual A ⅋ dual B
+dual (A ⅋ B)  = dual A ⊗ dual B
+dual ($∀ A)   = $∃ (dual A)
+dual ($∃ A)   = $∀ (dual A)
 \end{code}
 
-It is straightforward to prove that duality is a symmetric relation and that it
-behaves as an involution. From this we prove that it acts as the function
-$\dual\cdot$ defined in \Cref{sec:calculus}.
+It is straightforward to prove that duality is a an involution.
 
 \begin{code}
-dual-symm   : ∀{A B} → Dual A B → Dual B A
-dual-inv    : ∀{A B C} → Dual A B → Dual B C → A ≡ C
-dual-fun-r  : ∀{A B C} → Dual A B → Dual A C → B ≡ C
-dual-fun-l  : ∀{A B C} → Dual B A → Dual C A → B ≡ C
+dual-inv : ∀{n} {A : PreType n} → dual (dual A) ≡ A
 \end{code}
 \begin{code}[hide]
-dual-symm d-𝟘-⊤ = d-⊤-𝟘
-dual-symm d-⊤-𝟘 = d-𝟘-⊤
-dual-symm d-𝟙-⊥ = d-⊥-𝟙
-dual-symm d-⊥-𝟙 = d-𝟙-⊥
-dual-symm (d-!-? p) = d-?-! (dual-symm p)
-dual-symm (d-?-! p) = d-!-? (dual-symm p)
-dual-symm (d-&-⊕ p q) = d-⊕-& (dual-symm p) (dual-symm q)
-dual-symm (d-⊕-& p q) = d-&-⊕ (dual-symm p) (dual-symm q)
-dual-symm (d-⊗-⅋ p q) = d-⅋-⊗ (dual-symm p) (dual-symm q)
-dual-symm (d-⅋-⊗ p q) = d-⊗-⅋ (dual-symm p) (dual-symm q)
+dual-inv {_} {𝟘} = refl
+dual-inv {_} {𝟙} = refl
+dual-inv {_} {⊥} = refl
+dual-inv {_} {⊤} = refl
+dual-inv {_} {var x} = refl
+dual-inv {_} {rav x} = refl
+dual-inv {_} {¡ A} = cong ¡ dual-inv
+dual-inv {_} {¿ A} = cong ¿ dual-inv
+dual-inv {_} {A & B} = cong₂ _&_ dual-inv dual-inv
+dual-inv {_} {A ⊕ B} = cong₂ _⊕_ dual-inv dual-inv
+dual-inv {_} {A ⊗ B} = cong₂ _⊗_ dual-inv dual-inv
+dual-inv {_} {A ⅋ B} = cong₂ _⅋_ dual-inv dual-inv
+dual-inv {_} {$∀ A} = cong $∀ dual-inv
+dual-inv {_} {$∃ A} = cong $∃ dual-inv
 \end{code}
 
-\begin{code}[hide]
-dual-inv d-𝟘-⊤ d-⊤-𝟘 = refl
-dual-inv d-⊤-𝟘 d-𝟘-⊤ = refl
-dual-inv d-𝟙-⊥ d-⊥-𝟙 = refl
-dual-inv d-⊥-𝟙 d-𝟙-⊥ = refl
-dual-inv (d-!-? p) (d-?-! q) = cong ¡ (dual-inv p q)
-dual-inv (d-?-! p) (d-!-? q) = cong ¿ (dual-inv p q)
-dual-inv (d-&-⊕ p q) (d-⊕-& r s) = cong₂ _&_ (dual-inv p r) (dual-inv q s)
-dual-inv (d-⊕-& p q) (d-&-⊕ r s) = cong₂ _⊕_ (dual-inv p r) (dual-inv q s)
-dual-inv (d-⊗-⅋ p q) (d-⅋-⊗ r s) = cong₂ _⊗_ (dual-inv p r) (dual-inv q s)
-dual-inv (d-⅋-⊗ p q) (d-⊗-⅋ r s) = cong₂ _⅋_ (dual-inv p r) (dual-inv q s)
+In fact, this property is so important in the rest of the formalization that it
+is worth defining an implicit rewriting rules so that Agda can autonomously
+apply it whenever possible. This is achieved by means of the following pragma
+directive.
 
-dual-fun-r d e = dual-inv (dual-symm d) e
-
-dual-fun-l d e = dual-inv d (dual-symm e)
+\begin{code}
+{-# REWRITE dual-inv #-}
 \end{code}
+
 
