--- a/paper/Type.tex
+++ b/paper/Type.tex
@@ -1,4 +1,17 @@
 \begin{code}[hide]%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
+\AgdaKeyword{OPTIONS}\AgdaSpace{}%
+\AgdaPragma{--rewriting}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Nat}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Fin}\<%
+\\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Relation.Binary.PropositionalEquality}\AgdaSpace{}%
@@ -7,18 +20,26 @@
 \AgdaInductiveConstructor{refl}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{cong}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{cong₂}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Agda.Builtin.Equality.Rewrite}\<%
 \end{code}
 
 \subsection{Type Representation}
 \label{sec:type-agda}
 
-The representation of types is standard, with one constructor for each of the
-forms described in \Cref{sec:calculus}.
+The representation of types is fairly standard, with one constructor for each of
+the forms described in \Cref{sec:calculus}. We use de Bruijn indices for
+denoting type variables and we make sure that types are well-scoped by indexing
+them with the number of variables that must be bound.
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Type}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaPrimitive{Set}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
@@ -28,15 +49,34 @@ forms described in \Cref{sec:calculus}.
 \AgdaInductiveConstructor{⊥}\AgdaSpace{}%
 \AgdaInductiveConstructor{⊤}%
 \>[19]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Type}\<%
+\AgdaSymbol{∀\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\<%
+\\
+%
+\>[2]\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaInductiveConstructor{rav}%
+\>[19]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Fin}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\<%
 \\
 %
 \>[2]\AgdaInductiveConstructor{¡}\AgdaSpace{}%
 \AgdaInductiveConstructor{¿}%
 \>[19]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Type}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Type}\<%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\<%
 \\
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}\&\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -44,475 +84,309 @@ forms described in \Cref{sec:calculus}.
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}⊗\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}⅋\AgdaUnderscore{}}}%
 \>[19]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Type}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Type}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Type}\<%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\<%
+\\
+%
+\>[2]\AgdaInductiveConstructor{\$∀}\AgdaSpace{}%
+\AgdaInductiveConstructor{\$∃}%
+\>[19]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\<%
 \end{code}
 
-The notion of duality is formalized as a \emph{relation} \AgdaDatatype{Dual}
-such that $\AgdaDatatype{Dual}~A~B$ holds if and only if $A = \dual{B}$.
+Note the constructors \AgdaInductiveConstructor{var} and
+\AgdaInductiveConstructor{rav}, which respectively represent type variables and
+their dual, and the quantifiers \AgdaInductiveConstructor{\$∀} and
+\AgdaInductiveConstructor{\$∃} which increase the number of bound variables in
+the scoped (pre)type.
+
+The dual of a (pre)type is computed by the following \emph{function}
+\AgdaFunction{dual}.
 
 \begin{code}%
-\>[0]\AgdaKeyword{data}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Type}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Type}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaPrimitive{Set}\AgdaSpace{}%
-\AgdaKeyword{where}\<%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaInductiveConstructor{d-𝟘-⊤}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaInductiveConstructor{𝟘}\AgdaSpace{}%
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaInductiveConstructor{𝟘}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{⊤}\<%
 \\
-%
-\>[2]\AgdaInductiveConstructor{d-⊤-𝟘}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
-\AgdaInductiveConstructor{𝟘}\<%
-\\
-%
-\>[2]\AgdaInductiveConstructor{d-𝟙-⊥}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaInductiveConstructor{𝟙}\AgdaSpace{}%
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaInductiveConstructor{𝟙}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{⊥}\<%
 \\
-%
-\>[2]\AgdaInductiveConstructor{d-⊥-𝟙}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊥}\AgdaSpace{}%
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊥}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{𝟙}\<%
 \\
-%
-\>[2]\AgdaInductiveConstructor{d-!-?}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{¡}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\<%
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{𝟘}\<%
 \\
-%
-\>[2]\AgdaInductiveConstructor{d-?-!}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{¡}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\<%
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{rav}\AgdaSpace{}%
+\AgdaBound{x}\<%
 \\
-%
-\>[2]\AgdaInductiveConstructor{d-\&-⊕}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{rav}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{¡}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{¿}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{¡}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\&}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{⊕}}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{)}\<%
-\\
-%
-\>[2]\AgdaInductiveConstructor{d-⊕-\&}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊕}}\AgdaSpace{}%
+\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{B}\<%
+\\
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⊕}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A′}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\&}}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{)}\<%
+\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{B}\<%
 \\
-%
-\>[2]\AgdaInductiveConstructor{d-⊗-⅋}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⊗}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A′}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{⅋}}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{)}\<%
-\\
-%
-\>[2]\AgdaInductiveConstructor{d-⅋-⊗}%
-\>[9]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{A′}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⅋}}\AgdaSpace{}%
+\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{B}\<%
+\\
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⅋}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{A′}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⊗}}\AgdaSpace{}%
-\AgdaBound{B′}\AgdaSymbol{)}\<%
+\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{B}\<%
+\\
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{\$∀}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{\$∃}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{\$∃}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}%
+\>[14]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{\$∀}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\<%
 \end{code}
 
-It is straightforward to prove that duality is a symmetric relation and that it
-behaves as an involution. From this we prove that it acts as the function
-$\dual\cdot$ defined in \Cref{sec:calculus}.
+It is straightforward to prove that duality is a an involution.
 
 \begin{code}%
-\>[0]\AgdaFunction{dual-symm}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{PreType}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
+\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{dual}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
 \AgdaBound{A}\<%
-\\
-\>[0]\AgdaFunction{dual-inv}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{C}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaBound{C}\<%
-\\
-\>[0]\AgdaFunction{dual-fun-r}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{C}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaBound{C}\<%
-\\
-\>[0]\AgdaFunction{dual-fun-l}%
-\>[12]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀\{}\AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Dual}\AgdaSpace{}%
-\AgdaBound{C}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaBound{C}\<%
 \end{code}
 \begin{code}[hide]%
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟘-⊤}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊤-𝟘}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊤-𝟘}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟘-⊤}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟙-⊥}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊥-𝟙}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊥-𝟙}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟙-⊥}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-?-!}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-?-!}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-\&-⊕}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊕-\&}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊕-\&}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-\&-⊕}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊗-⅋}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⅋-⊗}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⅋-⊗}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊗-⅋}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\<%
-\end{code}
-
-\begin{code}[hide]%
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟘-⊤}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊤-𝟘}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{𝟘}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊤-𝟘}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟘-⊤}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{𝟙}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟙-⊥}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊥-𝟙}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{⊥}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-⊥-𝟙}\AgdaSpace{}%
-\AgdaInductiveConstructor{d-𝟙-⊥}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{⊤}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-?-!}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{var}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\<%
+\\
+\>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{rav}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\<%
+\\
+\>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{¡}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cong}\AgdaSpace{}%
 \AgdaInductiveConstructor{¡}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\<%
+\AgdaFunction{dual-inv}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-?-!}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-!-?}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{¿}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cong}\AgdaSpace{}%
 \AgdaInductiveConstructor{¿}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\<%
+\AgdaFunction{dual-inv}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-\&-⊕}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊕-\&}\AgdaSpace{}%
-\AgdaBound{r}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\&}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cong₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}\&\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{r}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\<%
+\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaFunction{dual-inv}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊕-\&}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-\&-⊕}\AgdaSpace{}%
-\AgdaBound{r}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊕}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cong₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}⊕\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{r}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\<%
+\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaFunction{dual-inv}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊗-⅋}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⅋-⊗}\AgdaSpace{}%
-\AgdaBound{r}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⊗}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cong₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}⊗\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{r}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\<%
+\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaFunction{dual-inv}\<%
 \\
 \>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⅋-⊗}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{d-⊗-⅋}\AgdaSpace{}%
-\AgdaBound{r}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⅋}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{cong₂}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}⅋\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{p}\AgdaSpace{}%
-\AgdaBound{r}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{q}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{dual-fun-r}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{e}\<%
+\AgdaFunction{dual-inv}\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{dual-fun-l}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSpace{}%
+\>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{\$∀}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{dual-inv}\AgdaSpace{}%
-\AgdaBound{d}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{dual-symm}\AgdaSpace{}%
-\AgdaBound{e}\AgdaSymbol{)}\<%
+\AgdaFunction{cong}\AgdaSpace{}%
+\AgdaInductiveConstructor{\$∀}\AgdaSpace{}%
+\AgdaFunction{dual-inv}\<%
+\\
+\>[0]\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{\$∃}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{cong}\AgdaSpace{}%
+\AgdaInductiveConstructor{\$∃}\AgdaSpace{}%
+\AgdaFunction{dual-inv}\<%
 \end{code}
+
+In fact, this property is so important in the rest of the formalization that it
+is worth defining an implicit rewriting rules so that Agda can autonomously
+apply it whenever possible. This is achieved by means of the following pragma
+directive.
+
+\begin{code}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
+\AgdaKeyword{REWRITE}\AgdaSpace{}%
+\AgdaFunction{dual-inv}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
+\end{code}
+
 
